--- a/project.html
+++ b/project.html
@@ -5,7 +5,9 @@
 </head>
 <body>
     <h1>Welcome to My Webpage</h1>
-    <p>This is a paragraph of text on my webpage.</p>
+    <p>This is a paragraph of text on my webpage.
+        this is my world and this is my office
+    </p>
     <a href="https://www.example.com">Visit Example.com</a>
 </body>
 </html>
