--- a/project.html
+++ b/project.html
@@ -8,6 +8,7 @@
     <p>This is a paragraph of text on my webpage.<br>
         This is my world and this is my office.<br>
         This is Besant
+        How we can we achieve this.
     </p>
     <a href="https://www.example.com">Visit Example.com</a>
 </body>
